--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings" : {
     "DefaultConnection" : "Data source=bobafettteashop.db"
   },
+  "TokenKey": "aksjdn289adlk2as8duy290jbasd",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
